Make docker entry shell scripts executable.

--- a/raspi/Dockerfile_raspi
+++ b/raspi/Dockerfile_raspi
@@ -28,3 +28,6 @@ RUN ln -s /usr/lib/arm-linux-gnueabihf/crtn.o /usr/lib/crtn.o
 ENV ROOT /raspi
 WORKDIR ${ROOT}
 COPY . ${ROOT}
+
+# Make entry shell script executable
+RUN chmod +x ./build_dpkg.sh
