--- a/raspi/Dockerfile_gcc
+++ b/raspi/Dockerfile_gcc
@@ -8,3 +8,6 @@ RUN cd /bin && ln -s /usr/local/bin/g++ g++-9.1
 ENV ROOT /raspi
 WORKDIR ${ROOT}
 COPY . ${ROOT}
+
+# Make entry shell script executable
+RUN chmod +x ./run_tests.sh
