--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -6,7 +6,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
       - name: Build doc
-      - run: make -C ./doc
+        run: make -C ./doc
+
       - name: Build & run raspi unit tests
-      - run: make -C ./raspi -f Makefile_tests
+        run: make -C ./raspi -f Makefile_tests
