Build and test tool in docker container. Add step to ci job. Split and move requirements file to tools. Update dev section in doc.

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,5 +10,8 @@ jobs:
       - name: Build doc
         run: make -C ./doc
 
-      - name: Build & run raspi unit tests
+      - name: Build & unit test tools
+        run: make -C ./tools
+
+      - name: Build & unit test raspi
         run: make -C ./raspi -f Makefile_tests
