Fix a spelling mistake.
Change-Id: Iec88d82d41145bd2122563e0a6e57f13052dab9a

--- a/raspi/Dockerfile_raspi
+++ b/raspi/Dockerfile_raspi
@@ -1,6 +1,6 @@
 FROM raspbian/stretch:latest
 
-# Install dependenies
+# Install dependencies
 RUN apt-get update && apt-get upgrade -y
 RUN apt-get install -y \
     git \
