cat dns during build of container instead of run.
Change-Id: I246703bd23afcffdd5876ddfba463f5d029d91c3

--- a/raspi/Makefile_dpkg
+++ b/raspi/Makefile_dpkg
@@ -9,7 +9,7 @@ RASPI_ROOT_MOUNTED = /raspi_mount
 
 build_dpkg_in_docker:
 	docker buildx build -f Dockerfile_raspi --platform linux/arm . -t raspi
-	docker run raspi cat /etc/resolv.conf
+	#docker run raspi cat /etc/resolv.conf
 	#docker create -ti --name raspi_dpkg raspi bash
 	#docker cp raspi_dpkg:/raspi/ugglan.deb .
 	#docker rm -f raspi_dpkg
