--- a/raspi/Dockerfile_raspi
+++ b/raspi/Dockerfile_raspi
@@ -1,5 +1,7 @@
 FROM debian:stretch
 
+RUN raspi cat /etc/resolv.conf
+
 # Install dependencies
 #RUN apt-get update && apt-get upgrade -y
 #RUN apt-get install -y \
