Fix error in run cmd. Don't cache.
Change-Id: I7b15645c7835e9590f7191fbf789f26932450fa4

--- a/raspi/Dockerfile_raspi
+++ b/raspi/Dockerfile_raspi
@@ -1,6 +1,6 @@
 FROM debian:stretch
 
-RUN raspi cat /etc/resolv.conf
+RUN cat /etc/resolv.conf
 
 # Install dependencies
 #RUN apt-get update && apt-get upgrade -y
