--- a/raspi/Makefile_dpkg
+++ b/raspi/Makefile_dpkg
@@ -8,7 +8,7 @@ RASPI_ROOT_MOUNTED = /raspi_mount
 .PHONY: build_dpkg_in_docker
 
 build_dpkg_in_docker:
-	docker buildx build -f Dockerfile_raspi --platform linux/arm . -t raspi
+	docker buildx build -f Dockerfile_raspi --platform linux/arm --no-cache . -t raspi
 	#docker run raspi cat /etc/resolv.conf
 	#docker create -ti --name raspi_dpkg raspi bash
 	#docker cp raspi_dpkg:/raspi/ugglan.deb .
