Build using target host  (the compiling will not work on this arch). But how far do we get now?
Change-Id: Ice796c81ca27c99499cda55a08154d3ddb8986d8

--- a/raspi/Makefile_dpkg
+++ b/raspi/Makefile_dpkg
@@ -10,7 +10,6 @@ RASPI_ROOT_MOUNTED = /raspi_mount
 build_dpkg_in_docker:
 	docker build -f Dockerfile_raspi . -t raspi
 	#docker buildx build -f Dockerfile_raspi --no-cache --network=host . -t raspi
-	#docker run raspi cat /etc/resolv.conf
-	#docker create -ti --name raspi_dpkg raspi bash
-	#docker cp raspi_dpkg:/raspi/ugglan.deb .
-	#docker rm -f raspi_dpkg
+	docker create -ti --name raspi_dpkg raspi bash
+	docker cp raspi_dpkg:/raspi/ugglan.deb .
+	docker rm -f raspi_dpkg
